# Moduls_Web

./: alembic.ini  data.json  data.yaml  pyproject.toml  storage.py
Modul _1_2/: kurs.py
Modul_10_1/: comands
Modul_12/ex_01/: main.py  new_env.py  pyproject.toml
Modul_12/ex_01/migrations/versions/: f74271f8b12d_add_table_users.py
Modul_12/ex_01/src/entity/: models.py
Modul_12/ex_01/src/repository/: todos.py  users.py
Modul_12/ex_01/src/routes/: auth.py  todos.py
Modul_12/ex_01/src/schemas/: todo.py
Modul_12/ex_01/src/services/: auth.py
Modul_2_1/: log01.py  log02.py  log03.py  log04.py  log05.py  my_log.py  my_log_2.py  my_logger.py
Modul_2_2/app_poetry/: Dockerfile  pyproject.toml
Modul_3_1/: 01_thread_like_function.py  02_thread_class.py  03_thread_timer.py  04_thread_lock.py  05_event_thread.py  06_event_thread.py  07_event_stop.py  08_event_stop_start.py
Modul_3_2/: process_as_function.py
Modul_4_1/: index.html  main.py  my_client.py  my_server.py
Modul_5_1/: 01_intro.py  02_gather.py  03_create_task.py  04_forever.py  05_future_task.py  06_bounds.py  07_process_executor.py  08_get_http.py  ex_02.py  ex_03.py  ex_04.py  ex_05.py  ex_06.py  first_ex.py
Modul_5_2/: 01_async_for.py  02_async_for.py  03_async_for.py  04_queue.py  05_wait.py  06_client.py  07_client_httpx.py  07_client_kurs.py  07_homework.py  timing.py
Modul_6_1/: create_table.sql  lesson_one.sqllite  select_data.sql
Modul_6_2/: homework.sql  insert.py  insert_2.py  main.py  query.sql  select.py  test.py  update.py
Modul_7_1/: orm_async_session.py  orm_core.py  (+2 more)
(+142 files in other folders)
