[tool.poetry]
name = "moduls-web"
version = "0.1.0"
description = ""
authors = ["HMixany <137229468+HMixany@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^20.1.0"
requests = "^2.31.0"
aiohttp = "^3.9.0"
httpx = "^0.25.2"
websockets = "^12.0"
names = "^0.3.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
