[tool.poetry]
name = "app-poetry"
version = "0.1.0"
description = ""
authors = ["HMixany <137229468+HMixany@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
